closes #11. Added a new class NodeProperties just to save node property names as String constants. The refactor of all the remaining properties is pending yet.